...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="244-zY-bzl">
                                <rect key="frame" x="20.5" y="94" width="373" height="170"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lMa-7E-NUn">
                                        <rect key="frame" x="0.0" y="0.0" width="373" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="nameTFIdentifier"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="name"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rnv-Tk-Jgk">
                                        <rect key="frame" x="0.0" y="60" width="373" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailTFIdentifier"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gk4-yg-Siw">
                                        <rect key="frame" x="0.0" y="120" width="373" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="phoneTFIdentifier"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="phonePad" textContentType="tel"/>
                                    </textField>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="170" id="8Hp-bI-6FD"/>
...
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="emailTextField" destination="Rnv-Tk-Jgk" id="ie9-1J-Phw"/>
                        <outlet property="nameTextField" destination="lMa-7E-NUn" id="Fzo-bC-Nf2"/>
                        <outlet property="phoneTextField" destination="Gk4-yg-Siw" id="Agh-Nf-X9u"/>
                        <outlet property="updateUserButton" destination="qvW-zN-FJr" id="cIB-EY-nw9"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VZ5-Gz-mdN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1728" y="67"/>
        </scene>
...
