//
//  Constants.swift
//  MVVMCombine
//
//  Created by Victor Roldan on 16/02/21.
//

import Foundation


let tableViewAcceibilityIdentifier = "tableViewUsers"
let userNameMaxLength = 20
let userNameMinLength = 3
let userPhoneMaxLength = 10
