...
                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jsp-4S-EBd">
                        <rect key="frame" x="326" y="42.5" width="55" height="30"/>
                        <accessibility key="accessibilityConfiguration" identifier="tapMe"/>
                        <state key="normal" title="Update!"/>
                    </button>
                </subviews>
                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                <constraints>
                    <constraint firstItem="EkJ-E1-VZI" firstAttribute="centerX" secondItem="WJm-fK-pjV" secondAttribute="centerX" id="3zv-Ql-eBA"/>
...
